--- a/static/index.html
+++ b/static/index.html
@@ -3,23 +3,22 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>HCI Project Portfolio</title>
+	<title> Brian Joe </title>
 </head>
 
 <body>
-	<!-- this is a comment in HTML -->
-	<h1>Michael Bernstein</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
-	<h4>Project Portfolio</h4>
+	<h1> Brian Joe </h1>
+	<h4> Product Portfolio </h4>
 
-	<!-- p means paragraph -->
-	<p>Michael Bernstein is an assistant professor of Computer Science at Stanford University and director of the human-computer interaction group. He combines computation with crowds, designing systems that enable people to connect and coordinate online.</p>
+	<p> Brian Joe is a Senior Product Manager at Verizon Communications.  He is responsible for developing Enterprise Networking Products at Verizon.
+	</p>		
 
-	<h4>Projects</h4>
-	<ol>
-		<li>Waiting in line</li>
-		<li>Needfinding</li>
-		<li>Prototyping</li>
-		<li>...</li>
-	</ol>
+<h4> Project </h4>
+<ol>
+	<li> Waiting in line </li>
+	<li> Need finding </li>
+	<li> Prototyping </li>
+	<li> ... </li>
+</ol>
 </body>
-</html>
+</html>	
